CSS: Fix MUC sidebar spacing

--- a/src/plugins/muc-views/styles/muc-occupants.scss
+++ b/src/plugins/muc-views/styles/muc-occupants.scss
@@ -27,7 +27,6 @@
                 display: flex;
                 height: 100%;
                 flex-direction: row;
-                justify-content: space-between;
                 overflow: visible;
                 background-color: var(--occupants-background-color);
                 border-left: var(--occupants-border-left);
